--- a/app/src/main/res/layout/content_merchant_back_office.xml
+++ b/app/src/main/res/layout/content_merchant_back_office.xml
@@ -33,11 +33,41 @@
                 <Button
                     android:id="@+id/viewHistoryBtn"
                     style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="match_parent"
+                    android:layout_width="175dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/sales_overview"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    android:text="@string/view_sales_history"
+                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="175dp"
+                    android:gravity="end"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/viewHistoryBtn">
+
+                    <TextView
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textColor="@color/primaryTextColor"
+                        android:id="@+id/total_sales_for_today_value"
+                        android:layout_width="wrap_content"
+                        android:textSize="16sp"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_gravity="center_horizontal"
+                        android:id="@+id/total_sales_for_today_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/wallet_hint_foreground_holo_dark"
+                        android:text="@string/total_sales_for_today_label" />
+
+                </LinearLayout>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/chartCardView"
