--- a/app/src/main/res/layout/pos_product_item.xml
+++ b/app/src/main/res/layout/pos_product_item.xml
@@ -47,11 +47,11 @@
             android:id="@+id/productInfo"
             android:layout_alignBottom="@+id/product_image_wrapper"
             android:background="@color/translucent"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/product_name"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_weight="1"
@@ -62,14 +62,14 @@
 
             <TextView
                 android:id="@+id/product_price"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:gravity="end"
+                android:layout_gravity="start"
                 android:layout_weight="1"
                 android:padding="1dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/white" />
+
         </LinearLayout>
 
         <LinearLayout
